src/test/deca/context/valid/test_class/attribut_protected_int.deca
// Description:
//    Minimalistic class with attribut
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A {
    protected int x ;

}

{
    A a = new A() ;
}
