src/test/deca/context/invalid/test_class/selection_protected_int.deca
// Description:
//    Unit Test selection 
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A {
    protected int x = 3;


}

{
    A a = new A();
    println(a.x);
}


